[backend/frontend] Add quick filters on scenarios, simulations and atomic testing (#1294)